--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -13,12 +13,12 @@ jobs:
         run: |
            node -v 
            npm -v
-  #     - name: python Command 
-  #       run: |
-  #         import platform 
-  #         print
-  #         (platform.processor())
-  #       shell: python
+      - name: python Command 
+        run: |
+          import platform 
+          print
+          (platform.processor())
+        shell: python
   # run-windwos-commands:
   #   runs-on: windows-latest
   #   needs: ["run-shell-command"]
